# gimix

./: README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/gimix/: __init__.py  __main__.py  files.py  paths.py
src/gimix/cmd/: load.py
src/gimix/files/: __init__.py  load.py
tests/: conftest.py
tests/gimix/: test___init__.py  test_files.py  test_paths.py
tests/gimix/cmd/: test_load.py
tests/gimix/files/: test___init__.py  test_load.py
