[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gimix"
description = "gimmick mix."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT License"}
keywords = ["gimix", "mix", "gimmick", "command"]
authors = [
    { name = "Yuya Honda", email = "yuyahnd.info@gmail.com" }
]
maintainers = [
    { name = "Yuya Honda", email = "yuyahnd.info@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click==8.1.3",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest==7.2.1",
    "tox==4.4.4",
]

[project.urls]
"Homepage" = "https://github.com/yuyahnd/gimix"
"Bug Tracker" = "https://github.com/yuyahnd/gimix/issues"
"Repository" = "https://github.com/yuyahnd/gimix.git"

[project.scripts]
"mix" = "gimix.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "gimix.__version__"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
